src/styles/custom.css
main#home {
    width: 100%;
    margin-top: auto;
}

footer div {
    gap: 48px;
}

.card {
    max-width: 400px;
    margin: 0 auto;
    margin-top: 25px;
    gap: 16px;
}

.card-header {
    justify-content: center;
    padding: 10px 0px;
}

/* Mobile Styles */
@media only screen and (max-width: 480px) {

    div#form-controls {
        gap: 16px;
    }

    div#form-controls button {
        width: 150px;
    }

    div.navbar-item a,
    div.navbar-item div.select,
    div.navbar-item select {
        width: 100%;
    }
}

@media only screen and (min-width: 481px) {
    div#form-controls {
        gap: 150px;
    }

    div#form-controls button {
        width: 200px;
    }
}

